# mafs

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: dmat4.rs  dvec2.rs  dvec4.rs  fmat4.rs  fvec2.rs  fvec4.rs  lib.rs  private_macros.rs  traits.rs
