[package]
name = "mafs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.11", features = ["derive"], optional = true }
num-traits = { version = "0.2.16" }

[features]
bytemuck = ["dep:bytemuck"]