[package]
name = "mafs"
version = "0.1.0"
edition = "2021"
description = "Fast maths for tiny projects. With SIMD but just for x86"
repository = "https://github.com/alucas2/mafs"
keywords = ["simd", "avx", "vector", "3d"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.11", features = ["derive"], optional = true }
num-traits = { version = "0.2.16" }

[features]
bytemuck = ["dep:bytemuck"]